        The code copy was also synced with community copy at:
        http://en.wikipedia.org/wiki/WP:STiki/Good-faith-revert_messages
      # Metadata panel content now has "mouseover" support. In particular,
        this should permit the full display of comments which are truncated
        because they are too lengthy to fit in the fixed-size placeholder.
      # Due to an WMF API change, we were forced to change the way user
        edit counts are performed. The WMF changed the way pagination is done,
        breaking our earlier parser in some cases. This code was used to 
        determine STiki permissions (>1000 NS0 edits), "don't template 
        the regulars" logic, and non-critical aspects of milestone reporting.
      # Minor improvements to warning increment logic; in particular, better
        handling when duplicate section headers exist.
        
  * 2014-03-25
      # Emergency release in order to fix login code broken by a small
        WMF change (most of the burden probably falls to STiki for getting
        this incorrect). This update will be forced; that is, older versions
        of the STiki software will show an "upgrade required" message.
      # Changed the "Revision Filter" menu title to "Displayed Edits"
        in order to clear up some abiguity over sub-menu items.
  
  * 2014-02-05
      # The colors and font faces used in the diff presentation panel can
        now be changed via the "options" menu (T#037).
      # Per user request, larger font size options were made available (T#035).
      # Plurality switches ("#s#") are now utilized in the default AGF 
        messages, making them more customized to specific revert 
        cirumstances. Articles are also now linked in default AGF messages.
      # The WMF changed diff representation format, sending our
        parser into infinite loops on the back-end; eventually exhausting
        threads and halting edit ingestion. On the front-end, this caused 